src/objects/ED_Form_Setting__c.object
<CustomObject>
    <fields>
        <fullName>Has_Child__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Child</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hide_Parent_Question__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Parent Question</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Main_Question__c</fullName>
        <label>Main Question</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Question</label>
        <referenceTo>ED_Form_Setting__c</referenceTo>
        <relationshipLabel>Child ED Questions</relationshipLabel>
        <relationshipName>Child_ED_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question_Data_Type__c</fullName>
        <label>Question Data Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Check Box</fullName>
                </value>
                <value>
                    <fullName>Radio Button</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question_Text__c</fullName>
        <label>Question Text</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <label>Rank</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ED Form Setting</label>
    <nameField>
        <label>ED Form Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ED Form Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>